--- a/eduspire_new/css/style.css
+++ b/eduspire_new/css/style.css
@@ -1,5 +1,6 @@
 /* CSS Document */
-/*font-family: 'Roboto', sans-serif;*/
+/*font-family: 'Roboto', sans-serif;
+font-family: 'Raleway', sans-serif;*/
 
 body { margin: 0px; position: relative; padding: 0px; overflow-x: hidden; font-family: 'Roboto', sans-serif; font-weight: 400; font-size: 14px; color:#3c3b37; line-height: 24px; }
 
@@ -57,19 +58,20 @@ button.btndefault.big, a.btndefault.big { height: 48px; padding: 10px 20px; line
 
 .home_header .navbar-expand-md .navbar-collapse { width: 100%; display: flex !important; -moz-display: flex; -webkit-display: flex; flex-flow: row wrap; justify-content: space-between; align-items: center; }
 .home_header .navbar .navbar-nav { width: auto; }
-.home_header .navbar .navbar-nav .nav-item { padding: 12px 0px 12px 16px; }
+.home_header .navbar .navbar-nav .nav-item { padding: 12px 0px 12px 8px; }
 .home_header .navbar .navbar-nav .nav-item:first-child { padding-left: 0px; }
-.home_header .navbar .navbar-nav .nav-link { line-height: 26px; font-size: 14px; font-weight: 400; padding: 8px 0px 0px; color:#3c3b37; transition: 0.5s ease-in-out; -moz-transition: 0.5s ease-in-out; -webkit-transition: 0.5s ease-in-out; -ms-transition: 0.5s ease-in-out; }
+.home_header .navbar .navbar-nav .nav-link { line-height: 26px; font-size: 13px; font-weight: 400; padding: 8px 0px 0px; color:#3c3b37; transition: 0.5s ease-in-out; -moz-transition: 0.5s ease-in-out; -webkit-transition: 0.5s ease-in-out; -ms-transition: 0.5s ease-in-out; }
 .home_header .navbar .navbar-nav .nav-link:after { position: relative; top: 2px; }
 .home_header .navbar .navbar-nav .nav-link:hover { color:#0f7c90; transition: 0.5s ease-in-out; -moz-transition: 0.5s ease-in-out; -webkit-transition: 0.5s ease-in-out; -ms-transition: 0.5s ease-in-out; }
 
-.home_header .navbar .navbar-nav.f .nav-link { padding:8px 0px; }
-.home_header .navbar .navbar-nav.f .nav-item { padding-left: 20px; }
-.home_header .navbar .navbar-nav.f .nav-item:first-child { padding-left: 30px; padding-right: 30px; }
+.home_header .navbar .navbar-nav.f .nav-link { padding:8px 0px; position: relative; }
+.home_header .navbar .navbar-nav.f .nav-link span.fr { position: absolute; top: -6px; font-size: 11px; left: 0px; display: inline-block; font-weight: 700; }
+.home_header .navbar .navbar-nav.f .nav-item { padding-right: 10px; }
+.home_header .navbar .navbar-nav.f .nav-item:first-child { padding-left: 10px; padding-right: 10px; }
 
 .home_header .navbar .navbar-nav .nav-link svg { font-size: 18px; }
 
-.home_header .navbar .navbar-nav a.btn {  display: inline-block; color:#0f7c90; border: 1px solid #ddd; padding: 5px 20px; height: 40px; line-height: 28px; border-radius: 5px; transition: 0.5s ease-in-out; -moz-transition: 0.5s ease-in-out; -webkit-transition: 0.5s ease-in-out; -ms-transition: 0.5s ease-in-out;}
+.home_header .navbar .navbar-nav a.btn {  display: inline-block; color:#0f7c90; border: 1px solid #ddd; padding: 5px 10px; height: 40px; line-height: 28px; border-radius: 5px; font-size: 13px; transition: 0.5s ease-in-out; -moz-transition: 0.5s ease-in-out; -webkit-transition: 0.5s ease-in-out; -ms-transition: 0.5s ease-in-out;}
 .home_header .navbar .navbar-nav a.btn:hover { background:#0f7c90; color:#fff; border: 1px solid #0f7c90; transition: 0.5s ease-in-out; -moz-transition: 0.5s ease-in-out; -webkit-transition: 0.5s ease-in-out; -ms-transition: 0.5s ease-in-out; }
 
 .home_header .dropdown .dropdown-menu {
@@ -115,7 +117,7 @@ button.btndefault.big, a.btndefault.big { height: 48px; padding: 10px 20px; line
 .home_header .dropdown-menu > li > ul > li > ul { display: none; margin-top: 0px; padding: 10px 0px; border: 1px solid #ddd; background:#fff; width: 220px; position: absolute; top: -1px; min-height: 100%; right: -100%; margin: 0px; }
 .home_header .dropdown-menu > li > ul > li:hover > ul { display: block; }
 
-body.headerfix .home_header { position: fixed; top: 0px; left: 0px; width: 100%; display: inline-block; padding: 5px 30px; z-index: 999; box-shadow: 0px 0px 13px -2px #3c3b37; -moz-box-shadow: 0px 0px 13px -2px #3c3b37; -webkit-box-shadow: 0px 0px 13px -2px #3c3b37; -ms-box-shadow: 0px 0px 13px -2px #3c3b37; transition: 0.5s ease-in-out; -moz-transition: 0.5s ease-in-out; -webkit-transition: 0.5s ease-in-out; -ms-transition: 0.5s ease-in-out; }
+body.headerfix .home_header { position: fixed; top: 0px; left: 0px; width: 100%; display: inline-block; z-index: 999; box-shadow: 0px 0px 13px -2px #3c3b37; -moz-box-shadow: 0px 0px 13px -2px #3c3b37; -webkit-box-shadow: 0px 0px 13px -2px #3c3b37; -ms-box-shadow: 0px 0px 13px -2px #3c3b37; transition: 0.5s ease-in-out; -moz-transition: 0.5s ease-in-out; -webkit-transition: 0.5s ease-in-out; -ms-transition: 0.5s ease-in-out; }
 /*==================================end header=============================*/
 
 
@@ -145,7 +147,7 @@ body.headerfix .home_header { position: fixed; top: 0px; left: 0px; width: 100%;
 .searchbox form .selectbox svg { position: absolute; top: 11px; left: 20px; font-size: 22px; z-index: 3; }
 
 
-.home_header .navbar .navbar-nav.l { padding-left: 30px; }
+.home_header .navbar .navbar-nav.l { padding-left: 10px; }
 .home_header .searchbox { width: auto; padding: 10px 0px; flex: 1 0 auto; -moz-flex: 1 0 auto; -webkit-flex: 1 0 auto; -ms-flex: 1 0 auto; max-width: auto; }
 .home_header .searchbox { border-left: 1px solid #ddd; border-right: 1px solid #ddd; }
 .home_header .searchbox form { width: 100%; padding: 0px; }
@@ -156,7 +158,7 @@ body.headerfix .home_header { position: fixed; top: 0px; left: 0px; width: 100%;
 
 
 /*===course content===*/
-.course_cont { width: 100%; padding: 50px 15px; overflow-x: hidden; }
+.course_cont { width: 100%; padding: 50px 15px; }
 .course_cont h2 {  }
 .course_cont p {  }
 .course_cont .nav-tabs {  }
@@ -291,6 +293,88 @@ body.headerfix .home_header { position: fixed; top: 0px; left: 0px; width: 100%;
 .trans_educ .educ_box .box p { font-size: 19px; line-height: 26px; }
 
 
+/*===student section===*/
+.fr_g_sch { width: 100%; padding: 40px 15px; background:#fff; }
+.fr_g_sch .box { width: 100%; }
+.fr_g_sch .box.l ul { width: 100%; display: flex; -moz-display: flex; -webkit-display: flex; flex-flow: row wrap; justify-content: space-between; align-items: center; }
+.fr_g_sch .box.l ul li { flex: 0 0 25%; -moz-flex: 0 0 25%; -webkit-flex: 0 0 25%; -ms-flex: 0 0 25%; max-width: 25%; padding-right: 20px; }
+.fr_g_sch .box.l ul li a { display: block; height: 200px; width: 100%; }
+.fr_g_sch .box.l ul li a img { width: 100%; height: 100%; max-height: 100%; }
+.fr_g_sch .box.r p.ttl { font-size: 25px; font-weight: 400; }
+.fr_g_sch .box.r p.ttl strong { font-weight: 600; }
+.fr_g_sch .box.r ul { width: 100%; margin-top: 40px; display: inline-block; padding-left: 30px; }
+.fr_g_sch .box.r ul li { display: block; width: 100%; position: relative; padding-left: 20px; margin-bottom: 15px; }
+.fr_g_sch .box.r ul li:before { content: ""; display: inline-block; height: 3px; width: 3px;  position: absolute; top: 10px; left: 0px; border-radius: 50%; background: #333;  }
+.fr_g_sch .box.r p { font-size: 20px; margin-bottom: 0px; }
+/*=end student section=*/
+
+
+/*=== why learn eduspire===*/
+h2.h2 { width: 100%; text-align: center; font-size: 35px; position: relative; padding-bottom: 15px; margin-bottom: 30px; }
+h2.h2 span { display: inline-block; height: 2px; width: 80px; position: absolute; bottom: 0px; left: 50%; background:#0f7c90; transform: translateX(-50%); -moz-transform: translateX(-50%); -webkit-transform: translateX(-50%); -ms-transform: translateX(-50%); }
+.w_l_edus { width: 100%; padding: 40px 15px; background:#fff; }
+.w_l_edus .box { width: 100%; text-align: center; }
+.w_l_edus .box .icon { display: inline-block; margin-bottom: 20px; }
+.w_l_edus .box .icon .ic { display: flex; -moz-display: flex; color:#333; font-size: 40px; -webkit-display: flex; flex-flow: row wrap; justify-content: center; align-items: center; height: 106px; width: 106px; border-radius: 50%; background:#f7f6fa; }
+.w_l_edus .box h3 { font-weight: 500; font-size: 20px; }
+/*=end why learn eduspire=*/
+
+
+/*===teacher play area===*/
+.vd_hm_tch { width: 100%; padding: 40px 15px; background:#f5f5f5; }
+.vd_hm_tch .vd_area { width: 100%; cursor: pointer; position: relative; border-radius: 10px; overflow: hidden; display: flex; -moz-display: flex; -webkit-display: flex; flex-flow: column wrap; justify-content: center; align-items: center;  min-height: 352px; background: url("../images/bg_homepage_teacher.jpg") center top no-repeat; background-size: cover;  }
+.vd_hm_tch .vd_area:before { content: ""; height: 100%; width: 100%; display: inline-block;  position: absolute; top: 0px; left: 0px; border-radius: 10px; background: rgba(0, 0, 0, 0.5); }
+.vd_hm_tch .vd_area .icon { width: 100%; position: relative; text-align: center; height: 91px; margin-bottom: 20px; transition:0.3s ease-in-out; -moz-transition:0.3s ease-in-out; -webkit-transition:0.3s ease-in-out; }
+.vd_hm_tch .vd_area .icon:hover { height: 100px; transition:0.3s ease-in-out; -moz-transition:0.3s ease-in-out; -webkit-transition:0.3s ease-in-out; }
+.vd_hm_tch .vd_area .icon img { max-height: 100%; }
+.vd_hm_tch .vd_area h3 { color:#fff; position: relative; font-size: 30px; font-weight: 500; }
+.vd_hm_tch .vd_area p { margin-bottom: 0px; position: relative; font-size: 18px; color:#fff; }
+/*=end teacher play area=*/
+
+
+/*===count students area===*/
+.stud_count { width: 100%; padding: 50px 15px; background:#fff; }
+.stud_count .stud_count_b { width: 100%; }
+.stud_count .stud_count_b .box { width: 100%; text-align: center; position: relative; }
+.stud_count .stud_count_b .box:before { content: ""; display: inline-block; width: 1px; height: 100%; position: absolute; top: 0px; left: 0px; background:#ddd; }
+.stud_count .stud_count_b .box.f:before { display: none; }
+.stud_count .stud_count_b .box .countvalue { width: 100%; font-family: 'Raleway', sans-serif; margin-bottom: 5px; color:#0f7c90;  font-size: 30px; font-weight: 400; }
+.stud_count .stud_count_b .box p { margin-bottom: 0px; }
+.stud_count .stud_count_b h2 { text-align: center; font-size: 24px; margin-top: 50px; font-weight: 600; }
+.stud_count .stud_count_b .buttons { width: 100%; text-align: center; margin-top: 30px; }  
+.stud_count .stud_count_b .buttons a.btn_bookdemo { display: inline-block; padding: 15px 15px; width: 302px; height: 56px; border-radius: 30px; text-align: center; font-size: 18px; text-transform: uppercase; font-weight: 500; border: 0px; background: #0f7c90; color:#fff; }
+.stud_count .stud_count_b .buttons a.btn_bookdemo:hover { background: #40b4ca; }
+/*=end count students area=*/
+
+
+/*===eduspire testimonial===*/
+.edus_test { width: 100%; padding: 50px 15px; background:#f5f5f5; }
+.edus_test h2 { padding: 0px 23% 15px; }
+.edus_t_ar { width: 100%; max-width: 1060px; margin: 0 auto; }
+.edus_t_ar .box { width: 100%; }
+.edus_t_ar .box .stud_teac_vd { width: 100%; position: relative;cursor:pointer; border-radius: 10px; }
+.edus_t_ar .box .stud_teac_vd .img { position: relative; border-radius: 10px; overflow: hidden; border-radius: 10px; width: 100%; height: 317px; } 
+.edus_t_ar .box .stud_teac_vd .img img { width: 100%; height: 100%; display: inline-block;  }
+.edus_t_ar .box .stud_teac_vd .icon { width: 100%; height: 91px; position: absolute; display: inline-block; width: 91px; text-align: center; top: 50%; left: 50%; transform: translate(-50%, -50%); -moz-transform: translate(-50%, -50%); -webkit-transform: translate(-50%, -50%); -ms-transform: translate(-50%, -50%); transition:0.3s ease-in-out; -moz-transition:0.3s ease-in-out; -webkit-transition:0.3s ease-in-out; -ms-transition:0.3s ease-in-out; }
+.edus_t_ar .box .stud_teac_vd .icon img { max-height: 100%; }
+.edus_t_ar .box .stud_teac_vd:hover .icon { width: 110px; height: 110px; transition:0.3s ease-in-out; -moz-transition:0.3s ease-in-out; -webkit-transition:0.3s ease-in-out; -ms-transition:0.3s ease-in-out; }
+
+.edus_t_ar .studtest_slider { position: relative; min-height: 317px; }
+.edus_t_ar .studtest_slider:before { content: ""; display: inline-block; width: 97px; height: 87px; position: absolute; top: 0px; left: 0px; background: url("../images/icon_quote.png") 0px 0px no-repeat; background-size: cover; }
+.edus_t_ar .studtest_slider .item { width: 100%; padding: 62px 88px 32px 65px; min-height: 280px; }
+.edus_t_ar .studtest_slider .item > p { font-size: 15px; font-style: italic; padding-bottom: 26px; margin-bottom: 0px; }
+.edus_t_ar .studtest_slider .item .info { width: 100%; display: flex; -moz-display: flex; -webkit-display: flex; -ms-display: flex; flex-flow: row wrap; justify-content:space-between; align-items: center;  }
+.edus_t_ar .studtest_slider .item .info .img { width: 70px; height: 70px; border-radius: 50%; overflow: hidden; display: inline-block;}
+.edus_t_ar .studtest_slider .item .info .img img { width: 100%: height: 100%; border-radius: 50%; } 
+.edus_t_ar .studtest_slider .item .info .ttl { width: calc(100% - 80px); display: inline-block; }
+.edus_t_ar .studtest_slider .item .info h4 { font-size: 14px; margin-bottom: 0px; }
+.edus_t_ar .studtest_slider .item .info p { margin-bottom: 0px; }
+.edus_t_ar .studtest_slider .owl-dots { position: relative; display: inline-block; width: 100%; bottom: 0px; left: 0px; padding-left: 65px; }
+.edus_t_ar .studtest_slider .owl-dots .owl-dot { display: inline-block; max-width: 62px; margin-bottom: 10px; width: 100%; height: 4px; border-radius: 5px; background:#6e6e6e; opacity:0.5; margin-right: 6px; }
+.edus_t_ar .studtest_slider .owl-dots .owl-dot.active, .edus_t_ar .studtest_slider .owl-dots .owl-dot:hover { opacity:1; }
+/*=end eduspire testimonial=*/
+
+
 
 /*=======================teach eduspire page=====================*/
 #teach_banner {width: 100%; min-height: 430px; background: #505763 url(../images/header-image.jpg) center center; background-size: cover; position: relative; margin-top: 0px; padding: 0;}
@@ -379,6 +463,7 @@ section.pt { padding-top: 60px;}
 #section-7 .container.pdtop { padding: 120px 0px;  }
 #section-7 .center-block.small-content { max-width: 750px; /* text-align: center; */ margin: 0px auto;}
 #section-7 h3.text-center.text-shadow.subtext { color: #ffffff; font-size: 20px; line-height: 26px; font-weight: 400;}
+#section-8 { padding-bottom: 60px; }
 #section-8 p.join-text { color: #29303b; font-size: 18px;}
 #section-8 h2{ color: #29303b; font-size: 36px;}
 #section-8 button.button.btn-get { color: #fff; background-color: #ec5252;border: 1px solid transparent;padding: 17px 60px;  margin-top: 30px; font-size: 18px;}
@@ -388,7 +473,7 @@ section.pt { padding-top: 60px;}
 
 
 /*===================footer========================*/
-.h_footer { margin-top: 50px; padding: 34px 15px; width: 100%; border-top: 1px solid #ddd; position: relative; background:#fff; }
+.h_footer { margin-top: 0px; padding: 34px 15px; width: 100%; border-top: 1px solid #ddd; position: relative; background:#fff; }
 .h_footer .f_top { width: 100%; margin-bottom: 50px; }
 .h_footer .f_top .box { width: 100%; }
 .h_footer .f_top .box ul.links { width: 100%; }
@@ -451,6 +536,15 @@ section.pt { padding-top: 60px;}
 .modal-dialog.login .btn_list a.btn.fb:hover, .modal-dialog.login .btn_list a.btn.fb:focus { background: #164675; }
 .modal-dialog.login .btn_list a.btn.fb { background: #1a538a; border: 1px solid #1a538a; color:#fff; }
 .modal-dialog.login .btn_list a.btn .icon { position: absolute; font-size: 25px; display: flex; -moz-display: flex; -webkit-display: flex; flex-flow: row wrap; justify-content: center; align-items: center; width: 48px; height: 48px; top: 0px; left: 0px;  }
+
+
+.modal-dialog.t_vd { max-width: 600px; }
+.modal-dialog.t_vd .modal-content { padding: 0px; }
+.modal-dialog.t_vd .modal-header { padding: 24px 24px; display: flex; -moz-display: flex; -webkit-display: flex; flex-flow: row wrap; justify-content: space-between; align-items: center; }
+.modal-dialog.t_vd .modal-title { font-size: 16px; font-weight: 700; }
+.modal-dialog.t_vd .modal-body { padding: 24px 24px; }
+.modal-dialog.t_vd .video { width: 100%; }
+.modal-dialog.t_vd .video video { width: 100%; height: 300px; object-fit: cover; }
 /*==================end modals==================*/
 
 
